objects/Quote.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>mine</fullName>
        <columns>QUOTE.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>QUOTE.ISSYNCING</columns>
        <columns>QUOTE.EXPIRATIONDATE</columns>
        <columns>QUOTE.SUBTOTAL</columns>
        <columns>QUOTE.TOTALPRICE</columns>
        <filterScope>Mine</filterScope>
        <label>My Quotes</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>